--- a/configure.ac
+++ b/configure.ac
@@ -33,14 +33,15 @@ AC_SUBST(FDK_AAC_VERSION)
 AC_SUBST(LIBS_PUBLIC)
 AC_SUBST(LIBS_PRIVATE)
 
-X_PLATFORM=posix
+X_PLATFORM=notwin32
 case ${host} in
 *-*-mingw*)
     X_PLATFORM=win32
+    AC_CHECK_TOOL(RC, windres,)
     ;;
 *)
 esac
-AS_IF([test "$X_PLATFORM" = "win32"], [AC_CHECK_TOOL(RC, windres,)], [])
+AM_CONDITIONAL([FDK_PLATFORM_WIN32],[test "$X_PLATFORM" = "win32"])
 
 AC_CONFIG_FILES([Makefile
                  fdk-aac.pc])
